--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,7 @@ body {
     list-style: none;
     min-width: 150px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
+    flex-direction: column;
 }
 
 #services-submenu.active {
