--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ body {
 
 /* Submenu */
 #services-submenu {
-    display: block; /* Initially hide the submenu */
+    display: none; /* Initially hide the submenu */
     position: absolute;
     top: 40px; /* Align vertically below the menu item */
     left: 0;
@@ -67,6 +67,7 @@ body {
 }
 
 #services-submenu li:hover {
+    display: none;
     background-color: rgba(255, 255, 255, 0.2);
 }
 
