--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ body {
 /* Submenu */
 #services-submenu {
     display: none; /* Initially hide the submenu */
-    position: absolute;
+    position: relative;
     top: 40px; /* Align vertically below the menu item */
     left: 0;
     background-color: rgba(0, 0, 0, 0.9);
