--- a/styles.css
+++ b/styles.css
@@ -74,34 +74,15 @@ body {
 }
 
 /* Card Styling */
-#card-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    /* padding-top: 60px; Remove or adjust this line */
-}
-
 .card {
-    display: none; /* Cards are hidden by default */
-    position: relative; /* Change to relative positioning */
-    top: auto; /* reset top value */
-    left: auto; /* reset left value */
-    transform: none; /* remove transform */
+    display: none;
+    position: absolute;
+    top: calc(50px + 10px); /* Position directly below the menu */
+    left: 50%;
+    transform: translate(-50%, 0); /* Only translate horizontally */
     background: white;
-    padding: 5px;
+    padding: 20px;
     border-radius: 5px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
-    width: 90%; /* Adjust width for mobile */
-    margin: 10px; /* Add margin between cards */
-    max-width: 600px; /* added max width to the cards, so they dont take up the entire screen on larger devices*/
-}
-
-#card-container .card[style*="display: block"] {
-    display: block;
-}
-
-@media (min-width: 768px) {
-    .card {
-        width: 45%; /* Adjust width for larger screens */
-    }
+    max-width: 80%; /* Limit card width for better mobile display */
 }
