--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
 #scene-container {
     width: 100%;
     height: 100vh;
-    background: linear-gradient(to bottom, #87CEEB, #E0F2F7);
+    background: linear-gradient(to bottom, #000000, #E0F2F7);
 }
 
 /* Main Menu Styling */
@@ -84,5 +84,5 @@ body {
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
-    width: 95%; /* Limit card width for better mobile display */
+    width: 90%; /* Limit card width for better mobile display */
 }
