--- a/styles.css
+++ b/styles.css
@@ -73,6 +73,22 @@ body {
     background-color: rgba(255, 255, 255, 0.2);
 }
 
+#static-bg-image {
+    position: fixed;
+    top: 50px; 
+    left: 0;
+    width: 100%;
+    height: calc(100vh - 60px); /* Adjust height to fill remaining viewport */
+    background-image: url('hungwell_logo.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    z-index: 1;
+}
+
+#card-container {
+    z-index: 2;
+    position: relative;
+}
 /* Card Styling */
 .card {
     display: none;
@@ -86,3 +102,5 @@ body {
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
     width: 90%; /* Limit card width for better mobile display */
 }
+
+
