--- a/styles.css
+++ b/styles.css
@@ -77,8 +77,8 @@ body {
     position: fixed;
     top: 60px;
     left: 0;
-    width: 100%;
-    height: calc(100vh - 60px);
+    width: 50%;
+    height: 50%;
     background-image: url('hungwell_logo.png');
     background-size: cover;
     background-repeat: no-repeat;
