--- a/styles.css
+++ b/styles.css
@@ -74,11 +74,11 @@ body {
 }
 
 #static-bg-image {
-    position: fixed;
+    position: absolute;
     top: 60px;
     left: 0;
-    width: 50%;
-    height: 50%;
+    width: 50vh;
+    height: 50vh;
     background-image: url('hungwell_logo.png');
     background-size: cover;
     background-repeat: no-repeat;
@@ -87,7 +87,7 @@ body {
 
 #card-container {
     z-index: 8;
-    position: relative;
+    position: absolute;
     top: calc(50px + 10px); /* Position directly below the menu */
     display: flex; /* Ensure it's a flex container */
     flex-wrap: wrap;
