--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,8 @@ body {
 #scene-container {
     width: 100%;
     height: 100vh;
-    background: linear-gradient(to bottom, #000000, #E0F2F7);
+    background: url('/HW_coll_bg.png') no-repeat center center;
+    background-size: cover;
 }
 
 /* Main Menu Styling */
