--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
     background-color: rgba(0, 0, 0, 0);
     color: white;
     font-family: 'Impact';
-    font-size: 24px;
+    font-size: 24px !important;
     text-shadow: 3px 3px 3px black;
     padding: 10px 0;
     position: fixed;
