--- a/styles.css
+++ b/styles.css
@@ -14,10 +14,10 @@ body {
 /* Main Menu Styling */
 #menu-tray {
     background-color: rgba(0, 0, 0, 0);
-    color: white;
+    color: black;
     font-family: 'Impact';
     font-size: 24px !important;
-    text-shadow: 3px 3px 3px black;
+    text-shadow: 5px 5px 5px white;
     padding: 10px 0;
     position: fixed;
     top: 0;
