--- a/styles.css
+++ b/styles.css
@@ -13,11 +13,11 @@ body {
 
 /* Main Menu Styling */
 #menu-tray {
-    background-color: rgba(0, 0, 0, 0);
-    color: black;
+    background-color: rgba(0, 0, 0, .5);
+    color: white;
     font-family: 'Impact';
     font-size: 24px !important;
-    text-shadow: 5px 5px 5px white;
+    text-shadow: 5px 5px 5px black;
     padding: 10px 0;
     position: fixed;
     top: 0;
